make sure pre text is wrapped.

--- a/client/main.css
+++ b/client/main.css
@@ -9,10 +9,16 @@ body {
 }
 
 .pre {
-  white-space: pre;
+  	white-space: pre;
+    white-space: pre-wrap;       /* Since CSS 2.1 */
+    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+    white-space: -pre-wrap;      /* Opera 4-6 */
+    white-space: -o-pre-wrap;    /* Opera 7 */
+    word-wrap: break-word;       /* Internet Explorer 5.5+ */
 }
 .rule {
 	max-width: 900px;
+	padding-left: 20px;
 }
 .anchor {
 	height: 20px;
